<resources>
    <string name="app_name">ImHome</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact" translatable="false">ContactActivity</string>
    <string name="title_activity_wifi_settings" translatable="false">WifiSettings</string>
    <string name="title_activity_wifi_selection" translatable="false">WifiSelectionActivity</string>
    <string name="tvMessagesEnAttente">Messages en attente d\'envoi :</string>
    <string name="tvContactPrevenir">Contacts à prévenir :</string>
    <string name="tvListWifi">Liste des wifis enregistrés :</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cbRecurrence">Rendre récurrent</string>
    <string name="cbRecurrenceSet">Rendre récurrent à : </string>
    <string name="defaultMessage">Je suis arrivé :)</string>
    <string name="tvPleaseEnterMessageText">Saisissez le texte à envoyer : </string>
    <string name="tvPleaseEnterMessageTextNew">Saisissez le nouveau texte à envoyer : </string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="tvPleaseEnableWifi">Veuillez activer le wifi</string>
    <string name="tvNoMessages">Pas de messages !</string>
    <string name="tvNoRecipient">Pas de destinataire</string>
    <string name="tvSelectNumber">Selectionner un numero : </string>
    <string name="tstRecipientTwiceForbidden">Impossible d\'ajouter deux fois le meme numéro</string>
    <string name="notifMessageSentTo">Message envoyé à </string>
    <string name="notifMessageCriticalBattery">Batterie niveau critique</string>
    <string name="recipientAlerted">a été prévenu</string>
    <string name="messageCriticalBattery">J\'ai presque plus de batterie je t\'envoie mon message d\'arrivée quand je rallume mon portable</string>
    <string name="notifName">ImHome Message Envoyé</string>
    <string name="GPS">GPS</string>
    <string name="Wifi">Wifi</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_authorize_wifi">Autoriser accès au wifi</string>
    <string name="pref_description_authorize_wifi">Permet à ImHome
        d\'utiliser moins de batterie que le gps en se servant des noms wifi comme repère
    </string>

    <string name="pref_title_authorize_gps">Autoriser accès au gps</string>
    <string name="pref_description_authorize_gps">Permet à ImHome
        d\'avoir une localisation plus precise en se servant de la position gps du téléphone
    </string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_title_category_localisation">Localisation</string>
    <string name="pref_title_category_notification">Notification</string>
    <string name="pref_title_category_synchronization">Synchronisation</string>

    <string name="pref_header_data_sync">Autorisations</string>
    <string name="wifiDisabled">Wifi désactivé</string>

    <string name="pref_title_sync_frequency">Fréquence d\'actualisation</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 heure</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Synchroniser compte google</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Afficher notification message envoyé</string>
    <string name="pref_title_notification_distance">Distance de localisation</string>
    <string name="pref_summary_localisation_slider">Précision de la localisation gps en mètre</string>
    <string name="pref_title_ringtone">Sonnerie</string>

    <string name="pref_ringtone_silent">Mode silentieux</string>

    <string name="pref_title_vibrate">Vibreur</string>

    <string name="label_pref_version">Version application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="banner_ad_unit_id">ca-app-pub-7386174591450774/6174448046</string>
    <string name="tvNoMessagesPlus">(Appuyez sur le bouton +)</string>
    <string name="hintAddresstoSearch">Adresse de destination</string>
    <string name="NoRecipient">Pas de destinataires !</string>
    <string name="deleted">Supprimé !</string>
    <string name="btActivateGps">Permission GPS</string>
    <string name="tvActivateGps">Nous n\'avons pas le droit d\'accéder à votre GPS. Donnez nous l\'autorisation et c\'est parti !</string>
    <string name="btActivateWifi">Activer wifi</string>
    <string name="tvActivateWifi">Votre wifi est désactivé. Nous avons besoin qu\'il soit activé pour que vous puissiez choisir sur quel wifi nous allons nous baser pour prévenir vos contacts.</string>
    <string name="tvSplashWelcome">Bienvenue sur ImHome !</string>
    <string name="tvSplashExplanation">Cette application vous permettra de prévenir vos proches lorsque vous êtes arrivés à destination.</string>
    <string name="tvSplashWifiGps">Pour cela, c\'est très simple. Soit ImHome vous localisera par GPS, soit il détectera le Wifi disponible là-bas.</string>
    <string name="tvSplashSchedule">Demander à ImHome d\'envoyer un message, ne vous souciez plus de rien : ImHome s\'occupe du reste !</string>
    <string name="pref_previously_started" translatable="false">pref_previously_started</string>
    <string name="pref_title_language">Langue</string>
    <string name="pref_title_category_about">À propos</string>
    <string name="pref_title_authorize_sms">Autoriser accès sms</string>
    <string name="pref_description_authorize_sms">Permet à ImHome d\'envoyer le message à vos proches</string>
    <string name="manage_permissions_title">Gérer permissions</string>
    <string name="manage_permission_summary">Permet d\'accéder à la gestion de permission de l\'application</string>
    <string name="tvSelectDestination">Selectionnez votre destination :</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="enable_location">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="sentByImHome">-Message envoyé par l\'application ImHome pour Android</string>
    <string name="tvFaillure">Echec d\'envoi du message</string>
    <string name="tvNoNumber">Pas de numéro pour ce contact</string>
    <string name="btNewMessage">Ajouter un message</string>
    <string name="tvNoMessageAttente">Pas  de message en attente</string>
    <string name="btAdd">Ajouter</string>
    <string name="btNext">Suivant</string>
    <string name="tvMyWifi">Mes réseaux WIFI</string>
    <string name="noWifiSelected">Pas de wifi selectionné</string>
    <string name="noMarkerPlaced">Pas de destination choisie</string>
    <string name="GpsDisabled">GPS inaccessible</string>
    <string name="tvPleaseEnterNickname">Saisissez un surnom pour ce wifi</string>
    <string name="GPSExplain">Sélectionnez votre destination sur la carte. L\'application se servira de la position GPS de votre téléphone pour détecter votre arrivée.</string>
    <string name="WIFIExplain">Choisissez le réseau wifi qui se trouve sur votre lieu de destination. Dès que votre téléphone se connectera à ce réseau, ImHome saura que vous êtes bien arrivé.</string>
    <string name="TwoDestinationWay">Deux façons de choisir sa destination</string>
    <string name="Understood">J\'ai compris</string>
    <string name="btFavLocations">Favoris</string>
    <string name="cbAddFavLocations">Ajouter aux favoris</string>
    <string name="tvNoFavLocation">Pas de favoris</string>

</resources>
