<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.dailyvery.apps.imhome.SplashScreenActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tvSplashWelcome"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:textAllCaps="true"
    android:textColor="@color/colorWhite"
    android:textSize="20sp"
    android:layout_marginTop="25sp"
    android:layout_marginBottom="25sp"
    android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSplashExplanation"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_marginBottom="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSplashWifiGps"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_marginBottom="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSplashSchedule"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_marginBottom="25sp"
        android:textStyle="normal|bold" />

    <android.support.design.widget.FloatingActionButton android:id="@+id/fabSplash"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|center" android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_blue_24px"
        app:backgroundTint="@android:color/white" />


</LinearLayout>
