<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_gps" />

                <TextView
                    android:id="@+id/tvEmptyList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/GpsDisabled"
                    android:textColor="#222222"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.3"
            android:padding="15sp"
            android:text="@string/tvActivateGps"
            android:textAlignment="center" />
    </LinearLayout>
    <Button
        android:id="@+id/btActivateGps"
        android:text="@string/btActivateGps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="20sp"
        android:textColor="#FFFFFF" />





</LinearLayout>