<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationSelectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/color_bottom_line_disabled"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="10sp"

                app:srcCompat="@drawable/ic_loupe" />

            <com.dailyvery.apps.imhome.SearchBar.DelayAutoCompleteTextView
                android:id="@+id/geo_autocomplete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.9"
                android:dropDownWidth="fill_parent"
                android:hint="@string/hintAddresstoSearch"
                android:imeOptions="flagNoExtractUi|actionSearch"
                android:inputType="textCapSentences"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/geo_autocomplete_clear"
                android:layout_width="0dp"
                android:padding="5sp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="0.1"
                android:src="@drawable/ic_clear" />

        </LinearLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorPrimaryDark"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent" />



        <ProgressBar
            android:id="@+id/pbLoading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="150dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btFavoriteLocations"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/btFavLocations"
                android:padding="20sp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btValiderDestination"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/validate"
                android:padding="20sp"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>