<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_below="@id/tbPlaceSelection" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_place_selection"
    tools:context="com.dailyvery.apps.imhome.PlaceSelectionActivity">




    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabIndicatorColor="@color/colorWhite"
        app:tabTextColor="#FFFFFF"
        app:tabSelectedTextColor="#FFFFFF"
        android:minHeight="?attr/actionBarSize" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tab_layout"/>

    <LinearLayout
        android:clickable="true"
        android:layout_below="@id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tuto_layout"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="0sp"
            android:background="#e6242424">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3sp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0sp"
                    android:layout_height="45sp"
                    android:layout_weight="0.5"

                    android:src="@drawable/ic_point_white"/>
                <ImageView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"

                    android:src="@drawable/ic_point_white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="15sp"
                android:layout_marginTop="10sp"
                android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TwoDestinationWay"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="35sp"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:layout_marginRight="15sp"
                    android:src="@drawable/ic_gps"/>
                <TextView
                android:layout_width="0sp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:text="@string/GPSExplain"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"

                android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                android:layout_marginTop="40sp"
                    android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="0sp"
                    android:layout_marginRight="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_nowifi"/>
            <TextView
                android:layout_width="0sp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:text="@string/WIFIExplain"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="40sp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:padding="15sp"
                android:id="@+id/bTutoUnderstood"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:text="@string/Understood" />
            </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>